tests/parser/toplevel-progn.1.bad.error
error: Invalid attribute for progn
  --> test:4:0
   |
 4 |  (repr :transparent)
   |  ^^^^^^^^^^^^^^^^^^^ progn cannot have attributes
 5 |  (progn
   |  -
 6 | |  (define-type T
 7 | |    (T Integer)))
   | |________________- when parsing progn
