tests/parser/toplevel-progn.1.bad.coalton
;; BAD: Toplevel Progn
(package test-package)

(repr :transparent)
(progn
  (define-type T
    (T Integer)))
